--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.siddevlops.lyricssearcher">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -11,15 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LyricsSearcher">
-        <activity android:name=".MainActivity"></activity>
 
-        <activity android:name=".appintro.IntroActivity">
+        <activity android:name=".appintro.Splash">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-                </activity>
 
+        </activity>
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".appintro.IntroActivity">
+
+        </activity>
     </application>
 
 </manifest>
