--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // added //
     implementation 'com.android.volley:volley:1.1.1'
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:22.2.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     //implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
